# pykitcommander

./: CHANGELOG.md  MANIFEST.in  README.md  pypi.md  pyproject.toml  requirements.txt  setup.py
doc/source/: conf.py  pykitcommander.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pykitcommander.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
pykitcommander/: __init__.py  firmwareinterface.py  kitcommandererrors.py  kitmanager.py  kitprotocols.py  programmer.py  version.py
pykitcommander/fw/avr/: atmega4808-aws-iot-demo.hex  atmega4808-google-iot-demo.hex  atmega4808-iot-provision-v2.hex  atmega4808-iot-winc-upgrade.hex  avr128db48-iot-cellular-mini-arduino-demo.hex  avr128db48-iot-cellular-mini-provisioning.hex  avr128db64-iot-cellular-provision.hex
pykitcommander/fw/pic/: pic24fj128ga705-aws-iot-demo.hex  pic24fj128ga705-google-iot-demo.hex  pic24fj128ga705-iot-provision-v2.hex  pic24fj128ga705-iot-winc-upgrade.hex
pykitcommander/fw/sam/: sam_d21_iot_wg.X.production.hex  samd21e18a-trustplatform-provision.hex  samd21g18a-iot-provision.hex  samd21g18a-iot-winc-upgrade.hex  samd21g18a-iot-wx-provision.hex  samd21g18a-iot-wx-winc-upgrade.hex
pykitcommander/picpack/pic24fj128ga705/: nedbg_pic24fj128ga705.py  pic24fj128ga705pds.py
pykitcommander/picpack/pic24fj128ga705/common/: debuggerbase.py  debuginterfaceprovider.py  debugprovider.py  gen4engineinterface.py  gen4scriptwrapper.py  icspio.py  logging.json  mplablog.py  picdevice.py  primitiveaccumulator.py  primitivebase.py  primitiveembedded.py  primitivegenerator.py  primitiveprinter.py  primitiveproxy.py  primitiveutils.py  proginterfaceprovider.py  programexecinterfaceprovider.py  scriptinginterface.py  terminaloutput.py
pykitcommander/picpack/pic24fj128ga705/common/pyedbglib/hidtransport/: cyhidapi.py  hidtransportbase.py  hidtransportfactory.py  toolinfo.py
pykitcommander/picpack/pic24fj128ga705/common/pyedbglib/mplabtransport/: mplabtransport.py
pykitcommander/picpack/pic24fj128ga705/common/pyedbglib/primitive/: gen4controller.py  primitivecontroller.py  primitives.py
(+16 files in other folders)
